Fix anchor scroll position with fixed header
Add scroll-margin-top to headings to prevent fixed header from covering content when clicking anchor links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   padding-top: 30px;
+  scroll-margin-top: 80px;
 }
 
 h1 { font-size: 2em; }
